--- a/Website/Frontend/sheet.html
+++ b/Website/Frontend/sheet.html
@@ -52,7 +52,7 @@
                 <div class="header-icons">
                     <div class="user-info">
                         <span class="username">Praful</span>
-                        <img src="user-avatar.png" alt="User Avatar" class="user-avatar">
+                        <img src="avatar2.png" alt="User Avatar" class="user-avatar">
                     </div>
                 </div>
             </header>
@@ -63,7 +63,14 @@
                         <div class="form-group">
                             <label for="class">Class</label>
                             <select id="class" name="class">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
                                 <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
                                 <!-- Add more class options here -->
                             </select>
                         </div>
@@ -72,6 +79,9 @@
                             <label for="section">Section</label>
                             <select id="section" name="section">
                                 <option value="A">A</option>
+                                <option value="B">B</option>
+                                <option value="C">C</option>
+                                <option value="D">D</option>
                                 <!-- Add more section options here -->
                             </select>
                         </div>
@@ -81,7 +91,7 @@
                             <input type="date" id="date" name="date" value="2023-03-15">
                         </div>
 
-                        <button type="submit" class="btn-generate">Generate Sheet</button>
+                        <button type="submit" class="btn-generate">Preview Sheet</button>
                     </form>
                 </div>
             </div>
