--- a/Website/Frontend/index.html
+++ b/Website/Frontend/index.html
@@ -80,17 +80,12 @@
                         <input type="password" placeholder="Password" required>
                     </div>
 
-                    <div class="remember-group">
-                        <input type="checkbox" id="remember-me" checked>
-                        <label for="remember-me">Remember me</label>
-                    </div>
-
                     <button type="submit">Sign in</button>
-
+<!-- 
                     <div class="links">
                         <a href="#">Forgot password?</a>
                         <a href="#">Don't have an account? <span>Register here</span></a>
-                    </div>
+                    </div> -->
                 </form>
             </div>
         </div>
