--- a/Website/Frontend/sheet.html
+++ b/Website/Frontend/sheet.html
@@ -8,25 +8,141 @@
     <script>
         // Function to handle user logout
         function logout() {
-            // Clear session storage (or localStorage, depending on how you're managing sessions)
             localStorage.removeItem('loggedInUser'); // Clear any session data
+            window.location.href = "index.html"; // Redirect to login page
+        }
 
-            // Redirect to login page
-            window.location.href = "index.html";
+        // Function to load the report form
+        function loadReportForm() {
+            document.getElementById("form-container").innerHTML = `
+                <form action="#" method="post">
+                    <div class="form-group">
+                        <label for="class">Class</label>
+                        <select id="class" name="class">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="section">Section</label>
+                        <select id="section" name="section">
+                            <option value="A">A</option>
+                            <option value="B">B</option>
+                            <option value="C">C</option>
+                            <option value="D">D</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="student-id">Student ID</label>
+                        <input type="text" id="student-id" name="student-id" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="month">Month</label>
+                        <select id="month" name="month">
+                            <option value="01">January</option>
+                            <option value="02">February</option>
+                            <option value="03">March</option>
+                            <option value="04">April</option>
+                            <option value="05">May</option>
+                            <option value="06">June</option>
+                            <option value="07">July</option>
+                            <option value="08">August</option>
+                            <option value="09">September</option>
+                            <option value="10">October</option>
+                            <option value="11">November</option>
+                            <option value="12">December</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="year">Year</label>
+                        <input type="number" id="year" name="year" min="2000" max="2100" value="2023">
+                    </div>
+
+                    <button type="submit" class="btn-generate">Generate Report</button>
+                </form>
+            `;
+            // Update header title
+            document.querySelector('.header-title').textContent = 'Report';
+            // Update active link
+            setActiveLink('report');
+        }
+
+        // Function to set the active link in the sidebar
+        function setActiveLink(activeId) {
+            const links = document.querySelectorAll('.sidebar-menu li a');
+            links.forEach(link => {
+                link.classList.remove('active');
+                if (link.getAttribute('data-link') === activeId) {
+                    link.classList.add('active');
+                }
+            });
         }
 
         // Prevent going back to the sheet.html page after logging out
         window.onload = function() {
             if (!localStorage.getItem('loggedInUser')) {
-                // If no user is logged in, redirect to the login page
                 window.location.href = "index.html";
             }
 
-            // Disable back navigation after logging out
             window.history.pushState(null, "", window.location.href);
             window.onpopstate = function() {
                 window.history.pushState(null, "", window.location.href);
             };
+
+            // Load default attendance sheet form on initial load
+            loadDefaultAttendanceForm();
+        }
+
+        // Function to load the default attendance sheet form
+        function loadDefaultAttendanceForm() {
+            document.getElementById("form-container").innerHTML = `
+                <form action="#" method="post">
+                    <div class="form-group">
+                        <label for="class">Class</label>
+                        <select id="class" name="class">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="section">Section</label>
+                        <select id="section" name="section">
+                            <option value="A">A</option>
+                            <option value="B">B</option>
+                            <option value="C">C</option>
+                            <option value="D">D</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="date">Date</label>
+                        <input type="date" id="date" name="date" value="2023-03-15">
+                    </div>
+
+                    <button type="submit" class="btn-generate">Preview Sheet</button>
+                </form>
+            `;
+            // Update header title
+            document.querySelector('.header-title').textContent = 'Attendance Sheet';
+            // Update active link
+            setActiveLink('attendance');
         }
     </script>
 </head>
@@ -38,10 +154,9 @@
                 <h1>Attendify</h1>
             </div>
             <ul class="sidebar-menu">
-                <li><a href="#" class="active"><i class="icon">&#128203;</i> Attendance Sheet</a></li>
-                <li><a href="#"><i class="icon">&#128202;</i> Dashboard</a></li>
-                <li><a href="#"><i class="icon">&#128196;</i> Report</a></li>
-                <li><a href="javascript:void(0)" onclick="logout()"><i class="icon">&#128275;</i> Logout</a></li>
+                <li><a href="javascript:void(0);" data-link="attendance" onclick="loadDefaultAttendanceForm();"><i class="icon">&#128203;</i> Attendance Sheet</a></li>
+                <li><a href="javascript:void(0);" data-link="report" onclick="loadReportForm();"><i class="icon">&#128196;</i> Report</a></li>
+                <li><a href="javascript:void(0);" onclick="logout();"><i class="icon">&#128275;</i> Logout</a></li>
             </ul>
         </aside>
 
@@ -58,41 +173,8 @@
             </header>
 
             <div class="content">
-                <div class="form-container">
-                    <form action="#" method="post">
-                        <div class="form-group">
-                            <label for="class">Class</label>
-                            <select id="class" name="class">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8</option>
-                                <!-- Add more class options here -->
-                            </select>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="section">Section</label>
-                            <select id="section" name="section">
-                                <option value="A">A</option>
-                                <option value="B">B</option>
-                                <option value="C">C</option>
-                                <option value="D">D</option>
-                                <!-- Add more section options here -->
-                            </select>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="date">Date</label>
-                            <input type="date" id="date" name="date" value="2023-03-15">
-                        </div>
-
-                        <button type="submit" class="btn-generate">Preview Sheet</button>
-                    </form>
+                <div id="form-container" class="form-container">
+                    <!-- Default Attendance Sheet form will load here -->
                 </div>
             </div>
         </div>
