--- a/Website/Frontend/index.html
+++ b/Website/Frontend/index.html
@@ -10,7 +10,8 @@
         const teacherDatabase = {
             '1':'1',
             'teacherUser1': 'password123',
-            'teacherUser2': 'teacherPass'
+            'teacherUser2': 'teacherPass',
+            'Abhishek Rajput': '1'
         };
 
         const adminDatabase = {
